# light-pre-pass-test

./: CMakeLists.txt  Makefile
src/: CMakeLists.txt  HotValue.cpp  HotValue.hpp  Main.cpp  Math.hpp  Mesh.cpp  Mesh.hpp  Utils.cpp  Utils.hpp
