
PROJECT(LIGHT_PRE_PASS_TEST CXX)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

# Always build with debug symbols for now.
LIST(APPEND CMAKE_CXX_FLAGS -g)

IF(UNIX)
  IF(APPLE)
    SET(CMAKE_OSX_ARCHITECTURES i386) #;x86_64
  ENDIF()
ENDIF(UNIX)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)

IF (NOT OPENGL_FOUND OR NOT GLUT_FOUND)
  MESSAGE(FATAL_ERROR "Did not find OpenGL and/or Glut")
ENDIF()

INCLUDE_DIRECTORIES(
  "${CMAKE_CURRENT_SOURCE_DIR}/include"
  "${CMAKE_CURRENT_SOURCE_DIR}/src"
  "${CMAKE_CURRENT_SOURCE_DIR}/tests"
  "${OPENGL_INCLUDE_DIR}"
  "${GLUT_INCLUDE_DIR}"
)

SET(LIBRARIES 
  ${OPENGL_LIBRARIES}
  ${GLUT_LIBRARIES}
)

ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(tests)

