
PROJECT(LIGHT_PRE_PASS_TEST)

#CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

# Always build with debug symbols for now.
LIST(APPEND CMAKE_CXX_FLAGS -g)

IF(UNIX)
  IF(APPLE)
    SET(CMAKE_OSX_ARCHITECTURES i386) #;x86_64
  ENDIF()
ENDIF(UNIX)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(Boost REQUIRED)

INCLUDE_DIRECTORIES(
  "${CMAKE_CURRENT_SOURCE_DIR}/src"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/glew-1.5.7/include"
  "${OPENGL_INCLUDE_DIR}"
  "${GLUT_INCLUDE_DIR}"
  "${Boost_INCLUDE_DIR}"
)

SET(LIBRARIES 
  ${OPENGL_LIBRARIES}
  ${GLUT_LIBRARIES}
)

ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(tests)

